--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -9,35 +9,36 @@
         </div>
 
     {% else %}
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-        <div class="my-3">
-            <label for="inputEmail">Email</label>
+        <h1 class="h3 mb-3 font-weight-normal">Log in</h1>
+        <div class="mb-3">
+            <label for="inputEmail" class="form-label required">Email</label>
             <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control col" autocomplete="email" required autofocus>
         </div>
-        <div class="my-3">
-            <label for="inputPassword">Password</label>
+        <div class="mb-3">
+            <label for="inputPassword" class="form-label required">Password</label>
             <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
         </div>
 
         <input type="hidden" name="_csrf_token"
             value="{{ csrf_token('authenticate') }}"
         >
-
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
+        
+        <div class="mb-3">
+            <div class="form-chack">
+                <input type="checkbox" name="_remember_me" class="form-check-input">
+                <label class="form-check-label"> Remember me</label>
+            </div>
         </div>
 
-        <div class="my-4">
-            <button class="btn btn-lg btn-primary" type="submit">
+        <div class="mb-3">
+            <button type="submit" class="btn btn-primary">
                 Sign in
             </button>
         </div>
-
-        
-
+        <div class="mt-3">
+            <i class="text-center m-2">Don't have an account?</i>
+            <a class="btn btn-outline-secondary" href="{{ path('app_register') }}">Register</a>
+        </div>
     {% endif %}
-
 </form>
 {% endblock %}
